fix(ripple): fixes bug with vertical ripple alignment
Switches FAB ripples back to non-centered.
Resolves vertical alignment issue.  Closes #725.
Cleans up code tabbing in ripple.js.
Adds function comments in ripple.js.

--- a/src/core/style/structure.scss
+++ b/src/core/style/structure.scss
@@ -192,7 +192,7 @@ input {
   border-radius: 50%;
   &.md-ripple-placed {
     transition: left 0.9s $swift-ease-out-timing-function,
-                right 0.9s $swift-ease-out-timing-function,
+                top 0.9s $swift-ease-out-timing-function,
                 opacity 0.65s $swift-ease-out-timing-function,
                 transform 0.65s $swift-ease-out-timing-function;
   }
